Fix line break in row on smartphones

--- a/public/css/_discussion.scss
+++ b/public/css/_discussion.scss
@@ -1,5 +1,5 @@
 .statement-outer {
-  padding: 2rem;
+  padding: 2rem 1rem 2rem 1rem;
   color: $white;
   background: transparent;
   border: 0;
